[package]
name = "siteip"
version = "0.3.0"
authors = ["cheeroncode <code@autodo.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
develop_debug = "0.2.5"
clap = "2.33.3"
reqwest = { version = "0.11", features = ["blocking","json"] }
futures = "0.3.13"
tokio = "1.4.0"